First impression: View Component sucks balls

--- a/MinhaDemoMVC/MinhaDemoMVC/Views/Shared/_CookieConsentPartial.cshtml
+++ b/MinhaDemoMVC/MinhaDemoMVC/Views/Shared/_CookieConsentPartial.cshtml
@@ -10,6 +10,7 @@
 {
     <div id="cookieConsent" class="alert alert-info alert-dismissible fade show" role="alert">
         Use this space to summarize your privacy and cookie use policy. <a asp-area="" asp-controller="Home" asp-action="Privacy">Learn More</a>.
+        <vc:Carrinho></vc:Carrinho>
         <button type="button" class="accept-policy close" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
             <span aria-hidden="true">Accept</span>
         </button>
