--- a/MinhaDemoMVC/MinhaDemoMVC/Views/Home/Index.cshtml
+++ b/MinhaDemoMVC/MinhaDemoMVC/Views/Home/Index.cshtml
@@ -2,11 +2,12 @@
     ViewData["Title"] = "Home Page";
 }
 
-<partial name="_AvisoGeral" />
+@*<partial name="_AvisoGeral" />*@
 
 @await Html.PartialAsync("_AvisoGeral")
 
 <div class="text-center">
+    <vc:Carrinho></vc:Carrinho>
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
