--- a/MinhaDemoMVC/MinhaDemoMVC/Views/_ViewImports.cshtml
+++ b/MinhaDemoMVC/MinhaDemoMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using MinhaDemoMVC
 @using MinhaDemoMVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@addTagHelper "*, MinhaDemoMVC"
