--- a/MinhaDemoMVC/MinhaDemoMVC/Views/Filmes/Adicionar.cshtml
+++ b/MinhaDemoMVC/MinhaDemoMVC/Views/Filmes/Adicionar.cshtml
@@ -10,21 +10,33 @@
     <div class="col-md-4">
 
         <form asp-action="Adicionar">
+
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="Titulo" class="control-label"></label>
                 <input asp-for="Titulo" class="form-control" />
+                <span asp-validation-for="Titulo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DataLacamento" class="control-label"></label>
                 <input asp-for="DataLacamento" class="form-control" />
+                <span asp-validation-for="DataLacamento" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Genero" class="control-label"></label>
                 <input asp-for="Genero" class="form-control" />
+                <span asp-validation-for="Genero" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Valor" class="control-label"></label>
+                <input asp-for="Valor" class="form-control" />
+                <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Avaliacao" class="control-label"></label>
                 <input asp-for="Avaliacao" class="form-control" />
+                <span asp-validation-for="Avaliacao" class="text-danger"></span>
             </div>
 
             <div class="form-group">
@@ -34,3 +46,11 @@
 
     </div>
 </div>
+
+@section Scripts{ 
+    
+    @{ 
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+
+}
