--- a/AppModelo/src/DevIO.UI.Site/Views/Shared/_Layout.cshtml
+++ b/AppModelo/src/DevIO.UI.Site/Views/Shared/_Layout.cshtml
@@ -1,22 +1,20 @@
-﻿<!DOCTYPE html>
-
-<html>
+﻿<html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewData["Title"] - Minha AppModelo</title>
+    <title>@ViewData["Title"] - Minha App Modelo</title>
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.css" />
+        <link href="~/css/site_bundle.min.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/css/bootstrap.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
               crossorigin="anonymous"
-              integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChibrV7PBE=" />
+              integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" />
+        <link href="~/css/site.css" rel="stylesheet" />
     </environment>
 
+    <link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.css" />
 </head>
 <body>
 
@@ -35,9 +33,11 @@
                         </li>
                     </ul>
                 </div>
+
             </div>
         </nav>
     </header>
+
 
     <div class="container">
         <main role="main" class="pb-3">
@@ -46,26 +46,30 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">Rodapé</div>
+        <div class="container">
+            Minha App Modelo - <email email-domain="gmail.com">contato</email> - <email>suporte</email>
+        </div>
     </footer>
 
     <environment include="Development">
-        <script src="~/lib/jquery/jquery.js"></script>
-        <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+        <script src="~/js/site_bundle.min.js"></script>
+        <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
                 asp-fallback-src="~/lib/jquery/jquery.min.js"
                 asp-fallback-test="window.jQuery"
                 crossorigin="anonymous"
-                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZx1twRo8QtmkMRdAu8=">
+                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
         </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"
-                asp-fallback-src="~/lib/bootstrap/js/bootstrap.js"
+                asp-fallback-src="~/lib/bootstrap/js/bootstrap.min.js"
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
                 crossorigin="anonymous"
                 integrity="sha256-E/V4cWE4qvAeO5MOhjtGtqDzPndRO1LBk8lJ/PR7CA4=">
         </script>
+        <script src="~/js/site.js"></script>
     </environment>
+
 </body>
 </html>
