--- a/AppModelo/src/DevIO.UI.Site/Views/_ViewImports.cshtml
+++ b/AppModelo/src/DevIO.UI.Site/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using DevIO.UI.Site
-@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@addTagHelper "*, DevIO.UI.Site"
