trying out DI IoC

--- a/AppModelo/src/DevIO.UI.Site/Views/Home/Index.cshtml
+++ b/AppModelo/src/DevIO.UI.Site/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
-﻿
-@{
-    ViewData["Title"] = "Index";
-}
+﻿@inject DevIO.UI.Site.Data.IPedidoRepository PedidoRepository
 
 <h1>Index</h1>
 
 Olá
+
+@PedidoRepository.ObterPedido().Id
