--- a/html5-take-a-pic/main.css
+++ b/html5-take-a-pic/main.css
@@ -45,3 +45,7 @@
     font-family: "Lucida Grande", "Arial", sans-serif;
     width: 760px;
   }
+
+  body {
+      /* background-color: black; */
+  }
