--- a/AspNetCoreIdentity/AspNetCoreIdentity/Views/Home/Secret.cshtml
+++ b/AspNetCoreIdentity/AspNetCoreIdentity/Views/Home/Secret.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using AspNetCoreIdentity.Extensions
 @{
     ViewData["Title"] = "Secret";
 }
@@ -6,3 +6,19 @@
 <h1>Secret</h1>
 
 =)
+
+@{ 
+    if(this.IfClaim("Produtos", "Adicionar"))
+    {
+        <p>Você só verá isso se tiver permissao de adicionar!</p>
+    }
+}
+
+<div>
+    @Html.ActionLink("Secret", "Secret").IfClaimShow(this.Context, "Produtos", "Adicionar")
+</div>
+
+<div>
+    <br />
+    <a href="#" class="btn btn-danger @Html.Raw(this.IfClaimShow("Produtos", "NaoExisteNoBancoAinda"))">Excluir</a>
+</div>
