--- a/AspNetCoreIdentity/AspNetCoreIdentity/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreIdentity/AspNetCoreIdentity/Views/Shared/_Layout.cshtml
@@ -40,6 +40,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Secret">Secret</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SecretClaim">Secret Claim</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SecretClaimGravar">Secret Claim Gravar</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ClaimsCustom">Produtos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
