--- a/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/Views/Produtos/Details.cshtml
+++ b/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/Views/Produtos/Details.cshtml
@@ -1,59 +1,65 @@
 ﻿@model DevIO.App.ViewModels.ProdutoViewModel
 
 @{
-    ViewData["Title"] = "Detalhe do produto " + Model.Nome;
+    ViewData["Title"] = "Detalhe do produto - " + Model.Nome;
 }
 
 <h4 style="padding-top: 50px">@ViewData["Title"]</h4>
-
+<hr />
 <div class="row">
     <div class="col-md-4">
         <img src="~/imagens/@Model.Imagem" alt="@Model.Imagem" style="width: 300px; height: 428px" />
     </div>
     
     <div class="col-md-6">
-        <dl class="row">
-            <dt class="col-sm-2">
+        <dl>
+            <dt>
                 @Html.DisplayNameFor(model => model.Nome)
             </dt>
-            <dd class="col-sm-10">
+            <dd>
                 @Html.DisplayFor(model => model.Nome)
             </dd>
-            <dt class="col-sm-2">
+            <dt>
                 @Html.DisplayNameFor(model => model.Descricao)
             </dt>
-            <dd class="col-sm-10">
+            <dd>
                 @Html.DisplayFor(model => model.Descricao)
             </dd>
-            <dt class="col-sm-2">
+            <dt>
                 @Html.DisplayNameFor(model => model.Imagem)
             </dt>
-            <dd class="col-sm-10">
+            <dd>
                 @Html.DisplayFor(model => model.Imagem)
             </dd>
-            <dt class="col-sm-2">
+            <dt>
                 @Html.DisplayNameFor(model => model.Valor)
             </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Valor)
+            <dd>
+                @Model.Valor.ToString("C")
             </dd>
-            <dt class="col-sm-2">
+            <dt>
+                @Html.DisplayNameFor(model => model.DataCadastro)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.DataCadastro)
+            </dd>
+            <dt>
                 @Html.DisplayNameFor(model => model.Ativo)
             </dt>
-            <dd class="col-sm-10">
+            <dd>
                 @Html.DisplayFor(model => model.Ativo)
             </dd>
-            <dt class="col-sm-2">
+            <dt>
                 @Html.DisplayNameFor(model => model.Fornecedor)
             </dt>
-            <dd class="col-sm-10">
+            <dd>
                 @Html.DisplayFor(model => model.Fornecedor.Documento)
             </dd>
         </dl>
-    </div>
 
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+        <div>
+            <a class="btn btn-dark" asp-action="Edit" asp-route-id="@Model.Id">Editar</a>
+            <a class="btn btn-info" href="javascript:window.history.back();">Voltar</a>
+        </div>
+    </div>
 </div>
