--- a/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/Views/Fornecedores/Edit.cshtml
+++ b/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/Views/Fornecedores/Edit.cshtml
@@ -30,8 +30,8 @@
         <div class="form-group col-md-6">
             <label asp-for="TipoFornecedor"></label>
             <div>
-                <input type="radio" value="1" asp-for="TipoFornecedor" checked="@(Model.TipoFornecedor == 1)" /> Pessoa Física<br />
-                <input type="radio" value="2" asp-for="TipoFornecedor" checked="@(Model.TipoFornecedor == 2)" /> Pessoa Jurídica
+                <input type="radio" value="1" asp-for="TipoFornecedor" id="TipoFornecedor1" checked="@(Model.TipoFornecedor == 1)" /> Pessoa Física<br />
+                <input type="radio" value="2" asp-for="TipoFornecedor" id="TipoFornecedor2" checked="@(Model.TipoFornecedor == 2)" /> Pessoa Jurídica
             </div>
             <div>
                 &nbsp;
@@ -49,7 +49,7 @@
     </div>
 </form>
 
-<div>
+<div id="EnderecoTarget">
     <partial name="_DetalhesEndereco" />
 </div>
 
@@ -59,6 +59,20 @@
     <partial name="../Produtos/_ListaProdutos" model="@Model.Produtos" />
 </div>
 
+<div id="myModal" class="modal fade in">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div id="myModalContent"></div>
+        </div>
+    </div>
+</div>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $(document).ready(function () {
+            AjaxModal();
+        });
+    </script>
 }
