--- a/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/Views/Fornecedores/Create.cshtml
+++ b/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/Views/Fornecedores/Create.cshtml
@@ -26,7 +26,7 @@
             <div class="form-group">
                 <label asp-for="TipoFornecedor" class="control-label"></label><br />
                 <input type="radio" value="1" asp-for="TipoFornecedor" checked /> Pessoas Física<br />
-                <input type="radio" value="2" asp-for="TipoFornecedor" /> Pessoas Física
+                <input type="radio" value="2" asp-for="TipoFornecedor" /> Pessoas Jurídica
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
