--- a/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/Views/Fornecedores/Index.cshtml
+++ b/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/Views/Fornecedores/Index.cshtml
@@ -7,9 +7,10 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<p>
+<p supress-by-claim-name="Fornecedor" supress-by-claim-value="Excluir">
     <a class="btn btn-info" asp-action="Create">Novo Fornecedor</a>
 </p>
+
 <table class="table table-hover">
     <thead class="thead-dark">
         <tr>
@@ -41,7 +42,7 @@
                 <td class="text-right">
                     <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><spam class="fa fa-search"></spam></a>
                     <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><spam class="fa fa-pencil-alt"></spam></a>
-                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id"><spam class="fa fa-trash"></spam></a>
+                    <a class="btn btn-danger" supress-by-claim-name="Fornecedor" supress-by-claim-value="Excluir" asp-action="Delete" asp-route-id="@item.Id"><spam class="fa fa-trash"></spam></a>
                 </td>
             </tr>
         }
