--- a/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/Views/Fornecedores/Index.cshtml
+++ b/MinhaAppMvcCompleta/MinhaAppMvcCompleta/src/DevIO.App/Views/Fornecedores/Index.cshtml
@@ -7,7 +7,8 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<p supress-by-claim-name="Fornecedor" supress-by-claim-value="Excluir">
+<p supress-by-claim-name="Fornecedor" 
+   supress-by-claim-value="Excluir">
     <a class="btn btn-info" asp-action="Create">Novo Fornecedor</a>
 </p>
 
@@ -40,9 +41,26 @@
                     @Html.DisplayFor(modelItem => item.Ativo)
                 </td>
                 <td class="text-right">
-                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><spam class="fa fa-search"></spam></a>
-                    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><spam class="fa fa-pencil-alt"></spam></a>
-                    <a class="btn btn-danger" supress-by-claim-name="Fornecedor" supress-by-claim-value="Excluir" asp-action="Delete" asp-route-id="@item.Id"><spam class="fa fa-trash"></spam></a>
+                    <a class="btn btn-info" 
+                       asp-action="Details" 
+                       asp-route-id="@item.Id">
+                        <spam class="fa fa-search"></spam>
+                    </a>
+
+                    <a class="btn btn-warning" 
+                       disable-by-claim-name="Fornecedor" 
+                       disable-by-claim-value="Editar" 
+                       asp-action="Edit" asp-route-id="@item.Id">
+                        <spam class="fa fa-pencil-alt"></spam>
+                    </a>
+
+                    <a class="btn btn-danger" 
+                       supress-by-claim-name="Fornecedor" 
+                       supress-by-claim-value="Excluir" 
+                       asp-action="Delete" 
+                       asp-route-id="@item.Id">
+                        <spam class="fa fa-trash"></spam>
+                    </a>
                 </td>
             </tr>
         }
